# Sys2021

./: .clang-format  2018302339_吴涛_第一次进度报告.md  CMakeLists.txt  README.md  Sysy_parser.output  Sysy_parser.y  Sysy_scaner.l  Sysy_scaner_begin.l  Sysy_token.h  a.out  build.sh  clang_test.ll  lex.yy.c  llvm-main.cpp  llvmtest.ll  main.cc  main.cpp  scaner  syntax_tree.cc  syntax_tree.hh  sysy_driver.cc  sysy_driver.hh  test  test.c  test.cminus  test.ll  test.s  test.sy  test2.ll
IR/: BaseBlock.cc  BaseBlock.h  BasicBlock.cc  BasicBlock.h  Constant.cc  Constant.h  Function.cc  Function.h  GlobalVariable.cc  GlobalVariable.h  HighBlock.h  IRBuilder.h  IRprinter.cc  IRprinter.h  Instruction.cc  Instruction.h  Module.cc  Module.h  ReturnVal.h  Type.cc  Type.h  User.cc  User.h  Value.cc  Value.h
IRBuilder/: CMakeLists.txt  SYSYCBuilder.cc  SYSYCBuilder.h  SysyBuilder.cc  SysyBuilder.h
LLVM_Builder/: SYSYBuilderllvm.cpp  SYSYBuilderllvm.hpp  SysyBuilder.cpp  SysyBuilder.hpp
Report/: 2018302339_吴涛_第三次进度报告.md  2018302339_吴涛_第二次进度报告.md  2018302339_吴涛_第五次进度报告.md  2018302339_吴涛_第六次进度报告.md  2018302339_吴涛_第四次进度报告.md
TinyC/: lex.yy.c  makefile  parser.y  pysim1.py  scaner.l  y.output  y.tab.c  y.tab.h
codeGen/: codeGen.cc  codeGen.hh  instructionsGen.cc  instructionsGen.hh
example/CSC2020-USTC-FlammingMyCompiler-master/frontend/: Makefile  syntax_tree.cc  sysy  sysyFlexLexer.hh  sysy_parser.cc  sysy_parser.hh  sysy_parser.output  sysy_scanner.cc  sysy_scanner.ll
example/CSC2020-USTC-FlammingMyCompiler-master/include/OptimizePass/: InstructionSchedule.h
example/CSC2020-USTC-FlammingMyCompiler-master/src/frontend/: syntax_tree.hh
example/frontend/: syntax_tree.hh  sysy.cc  sysy_driver.cc  sysy_driver.hh  sysy_parser.yy  test.sy
example/src/front_test/: CMakeLists.txt  Parser.y  Scanner.l  main.cc  syntax_tree.hh  sysyFlexLexer.hh  sysy_driver.cc
example/src/front_test/IR/: Module.h
front/: location.hh  syntax_tree.cc  syntax_tree.hh  sysyFlexLexer.hh  sysy_driver.cc  sysy_driver.hh  sysy_parser.cc  sysy_parser.hh  sysy_parser.output  sysy_scanner.cc
llvm-builder/: SYSYBuilderllvm.cpp  SYSYBuilderllvm.hpp  io.c  monkeyType.cc
test/: CMakeLists.txt  Sysy_parser.y  Sysy_scaner.l  main.cc  syntax_tree.cc  syntax_tree.hh  sysy_driver.cc  sysy_driver.hh
test/CodeGen/: Analyzer.cc  CodeGen.cc  InstructionsGen.cc  InstructionsGen.hh  RegAlloc.cc
test/IR/: Type.h
test/IRBuilder/: SYSYCBuilder.cc
test/OptimizePass/: BBCommonSubExper.cc  BBConstPropagation.cc  BranchMerge.cc  CondSimplify.cc  ConstFlod.cc  DeadCodeEliminate.cc  GlobalVariableLocal.cc  HIRToMIR.cc  HighIRsimplyCFG.cc  IRCheck.cc  InstructionSchedule.cc  LoopFind.cc  LowerIR.cc  MergeCond.cc  PassManager.h  PowerArray.cc  RegisterAllocation.cc  SimplifyCFG.cc  Vectorization.cc
test/test/: test.py
tmp/: lexer.l  parser.ypp  scan.l
